--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/css/style.css" />
-    <title>Document</title>
+    <title>My Team</title>
   </head>
   <body>
     <header>
@@ -27,7 +27,7 @@
               <img src="images/header-img/close.svg" alt="menu" />
             </button>
             <a href="contact.html"
-              ><button class="navbar__btn" id="contact">contact us</button></a
+              ><button class="navbar__btn contact__btn" >contact us</button></a
             >
           </div>
           <button class="toggle-btn" onclick="openNavbar()">
@@ -199,13 +199,13 @@
         />
         <div class="container">
           <h1 class="start__title">Ready to get started?</h1>
-          <button class="start__btn" id="contact">contact</button>
+          <a href="contact.html"
+              ><button class="start__btn contact__btn">contact</button></a>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        
+      <div class="container">  
         <div class="footer__left">
           <div class="footer__nav">
             <div class="footer__top">
